install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/keywords.yaml   DESTINATION ${CMAKE_INSTALL_PREFIX}/config  RENAME keywords-orig.yaml PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/keywords-2.yaml DESTINATION ${CMAKE_INSTALL_PREFIX}/config  RENAME keywords.yaml      PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
