execute_process(COMMAND ${PROJECT_SOURCE_DIR}/util/kittie-cpp.py repo ${CMAKE_CURRENT_SOURCE_DIR} --tree-output=${CMAKE_CURRENT_BINARY_DIR})

install(
	FILES ${CMAKE_CURRENT_BINARY_DIR}/plotter-1d-kittie.py 
	RENAME plotter-1d.py 
	DESTINATION ${CMAKE_INSTALL_PREFIX}/plot 
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
install(
	FILES ${CMAKE_CURRENT_BINARY_DIR}/login-kittie.py 
	RENAME login.py 
	DESTINATION ${CMAKE_INSTALL_PREFIX}/plot 
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

