execute_process(COMMAND ${PROJECT_SOURCE_DIR}/util/kittie-cpp.py repo ${CMAKE_CURRENT_SOURCE_DIR} --tree-output=${CMAKE_CURRENT_BINARY_DIR})

install(
	FILES ${CMAKE_CURRENT_BINARY_DIR}/plotter-1d-kittie.py 
	RENAME plotter-1d.py 
	DESTINATION ${CMAKE_INSTALL_PREFIX}/plot 
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
install(
	FILES ${CMAKE_CURRENT_BINARY_DIR}/plotter-2d-kittie.py 
	RENAME plotter-2d.py 
	DESTINATION ${CMAKE_INSTALL_PREFIX}/plot 
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
install(
	FILES ${CMAKE_CURRENT_BINARY_DIR}/plotter-2d-triangular-kittie.py 
	RENAME plotter-2d-triangular.py
	DESTINATION ${CMAKE_INSTALL_PREFIX}/plot 
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
install(
	FILES ${CMAKE_CURRENT_BINARY_DIR}/plot_util-kittie.py 
	RENAME plot_util.py 
	DESTINATION ${CMAKE_INSTALL_PREFIX}/plot 
	PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)

install(
	FILES ${CMAKE_CURRENT_BINARY_DIR}/login-kittie.py 
	RENAME login.py 
	DESTINATION ${CMAKE_INSTALL_PREFIX}/plot 
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

