add_subdirectory(Fortran)
add_subdirectory(Python)
add_subdirectory(cpp)

install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/kittie-plotter.py DESTINATION ${CMAKE_INSTALL_PREFIX}/plot PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/matplotlibrc DESTINATION ${CMAKE_INSTALL_PREFIX}/plot PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
