execute_process(COMMAND ${PROJECT_SOURCE_DIR}/util/kittie-cpp.py repo ${CMAKE_CURRENT_SOURCE_DIR} --tree-output=${CMAKE_CURRENT_BINARY_DIR})

install(
	FILES ${CMAKE_CURRENT_BINARY_DIR}/writer-kittie.py 
	RENAME writer.py 
	DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/simple/Python 
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
install(
	FILES ${CMAKE_CURRENT_BINARY_DIR}/reader-kittie.py 
	RENAME reader.py 
	DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/simple/Python 
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
